--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=a298c83d539a8f6914d2348674271b4f
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/beerology?serverVersion=mariadb-10.4.11
 ###< doctrine/doctrine-bundle ###
