--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "symfony/phpunit-bridge": "^5.1",
         "symfony/stopwatch": "^4.4",
         "symfony/var-dumper": "^4.4",
-        "symfony/web-profiler-bundle": "^4.4"
+        "symfony/web-profiler-bundle": "^4.4",
+        "theofidry/alice-data-fixtures": "^1.3"
     },
     "config": {
         "preferred-install": {
